--- a/src/app/projetos/projetos.component.html
+++ b/src/app/projetos/projetos.component.html
@@ -1,6 +1,6 @@
 <body>
     <div class="background"></div>
-    <section class="introducao-interna interna-produtos" [@popOverState]>
+    <section class="introducao-interna" [@popOverState]>
         <div class="">
             <h1> Projetos</h1>
             <p>
