--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -69,3 +69,40 @@ img {
 .menu li a img:hover {
     border: none;
 }
+
+@media only screen and (max-width: 787px) {
+    .logomarca {
+        margin: 0 auto;
+    }
+    /*Header*/
+    .menu {
+        position: relative;
+        padding-bottom: 10px;
+    }
+    .menu img {
+        margin: 0 auto 10px auto;
+    }
+    .menu {
+        text-align: center;
+    }
+    .menu li {
+        margin: 5px 5px 10px 5px;
+    }
+    .menu li a {
+        width: 136px;
+        display: block;
+        float: left;
+        border: none;
+    }
+    .menu li a img {
+        border: none;
+    }
+    .menu li a:hover {
+        padding-bottom: 3px;
+        text-decoration: underline;
+        border: none;
+    }
+    .menu li a img:hover {
+        border: none;
+    }
+}
