--- a/src/app/projetos/projetos.component.css
+++ b/src/app/projetos/projetos.component.css
@@ -11,7 +11,6 @@
 
 .projeto-item {
     padding-top: 60px;
-    height: 640px;
 }
 
 .projeto-item img {
@@ -118,4 +117,61 @@
     font-size: 24px;
     text-transform: uppercase;
     font-weight: bold;
+}
+
+@media screen and (min-width: 788px) and (max-width: 979px) {
+    /*projetos*/
+    .projeto-item {
+        height: 100vh;
+    }
+    .projeto-item h2 {
+        margin-bottom: -56px;
+    }
+    .projeto-icone {
+        padding: 0px 0;
+    }
+    .projeto-info p {
+        font-size: 14px;
+        line-height: 20px;
+        height: 122px;
+        padding: 20px 30px;
+    }
+    .projeto-info ul li {
+        width: 180px;
+        height: 49px;
+    }
+}
+
+@media only screen and (max-width: 787px) {
+    .projeto-item {
+        padding-top: 30px;
+    }
+    /*Introdução Interna*/
+    .introducao-interna {
+        margin-top: 0px;
+    }
+    /*projetos*/
+    .projeto-item h2 {
+        top: -100px;
+        margin-bottom: -68px;
+    }
+    .projeto-icone {
+        padding: 20px 0;
+    }
+    .projeto-icone img {
+        width: 300px;
+    }
+    .projeto-info p {
+        font-size: 14px;
+        line-height: 20px;
+        height: auto;
+        padding: 20px 30px;
+    }
+    .projeto-info ul li {
+        width: 149px;
+        height: 49px;
+        font-size: 14px;
+        line-height: 20px;
+        padding-top: 14px;
+    }
 }
