--- a/src/app/sobre/sobre.component.css
+++ b/src/app/sobre/sobre.component.css
@@ -4,7 +4,7 @@
     top: 0%;
     left: 0%;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: url("../../assets/imagens/background-rose.jpg") no-repeat center;
     background-position: center;
 }
@@ -16,7 +16,6 @@ img {
 
 .missao-sobre {
     padding-top: 60px;
-    height: 520px;
 }
 
 .missao-sobre p {
@@ -65,26 +64,6 @@ img {
     margin: 6px auto 10px auto;
 }
 
-.subtitulo {
-    font-size: 24px;
-    line-height: 30px;
-    font-weight: bold;
-    letter-spacing: .1em;
-    color: #fff;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 40px;
-}
-
-.subtitulo:after {
-    content: "";
-    display: block;
-    width: 60px;
-    height: 3px;
-    background: #fff;
-    margin: 10px auto;
-}
-
 .subtitulo-interno {
     font-size: 24px;
     line-height: 30px;
@@ -95,11 +74,18 @@ img {
     margin-bottom: 20px;
 }
 
-.subtitulo-interno:after {
-    content: "";
-    display: block;
-    width: 60px;
-    height: 3px;
-    background: #fff;
-    margin: 10px 0;
+@media only screen and (max-width: 787px) {
+    .missao-sobre {
+        padding-top: 0px;
+        height: auto;
+    }
+    .missao-sobre p {
+        padding-right: 0px;
+    }
+    .background {
+        height: 100%;
+    }
+    body {
+        height: auto;
+    }
 }
