--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -18,10 +18,10 @@
                     <a href="contato">Contato</a>
                 </li>
                 <li>
-                    <a href="# "><img src="../../assets/imagens/redes-sociais/icon-instagram.svg " alt="Icone do instagram "></a>
+                    <a target="_blank" href="https://www.instagram.com/mcast.arq/"><img src="../../assets/imagens/redes-sociais/icon-instagram.svg " alt="Icone do instagram "></a>
                 </li>
                 <li>
-                    <a href="# "><img src="../../assets/imagens/redes-sociais/whatsapp.svg " alt="Icone do Whatsapp "></a>
+                    <a target="_blank" href="https://wa.me/5581995139730?text=Ol%C3%A1+Milena%2C+visitei+seu+site+e+gostaria+de+solicitar+um+or%C3%A7amento&app_absent=0"><img src="../../assets/imagens/redes-sociais/whatsapp.svg " alt="Icone do Whatsapp"></a>
                 </li>
             </ul>
         </div>
