--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="routeLoading" class="loading">
     <section class="center">
         <div class="ring"></div>
-        <span>Loading...</span>
+        <span>Loading..</span>
     </section>
 </div>
 
