--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -33,12 +33,11 @@
             <div *ngIf="!f.valid && f.touched">Preencha todos os campos obrigatórios</div>
         </form>
 
-        <div class="contato-dados grid-6" [@popOverState]>
+        <div class="contato-dados grid-6" [@popOverState] *ngIf="contato">
             <h3>Outras formas de contato</h3>
-            <span>81 99513-9730</span>
-            <span>milenascast.arq@gmail.com</span>
-            <span>Recife - PE / Brasil</span>
-
+            <span>{{contato.fields.telefone}}</span>
+            <span>{{contato.fields.email}}</span>
+            <span>{{contato.fields.endereco}}</span>
         </div>
     </section>
 </body>
