--- a/src/app/projetos/projetos.component.html
+++ b/src/app/projetos/projetos.component.html
@@ -9,51 +9,53 @@
         </div>
     </section>
     <section>
-        <div class="projeto-item container" [@popOverState]>
+        <div class="projeto-item container" [@popOverState] *ngIf="projeto">
             <div class="grid-11">
-                <img src="../../assets/imagens/projetos/modelo1.png" alt="Imagem projeto quarto">
-                <h2>Quarto</h2>
+                <img src="{{projeto.fields.primeiraImagem.fields.file.url}}" alt="Primeira Imagem projeto {{projeto.fields.titulo}}">
+                <h2>{{projeto.fields.titulo}}</h2>
             </div>
             <div class="grid-5 projeto-icone">
-                <img src="../../assets/imagens/projetos/modelo3.png" alt="Imagem projeto quarto 2">
+                <img src="{{projeto.fields.segundaImagem.fields.file.url}}" alt="Segunda Imagem projeto {{projeto.fields.titulo}}">
             </div>
             <div class="grid-8">
-                <img src="../../assets/imagens/projetos/modelo2.png" alt="Imagem projeto quarto 3">
+                <img src="{{projeto.fields.terceiraImagem.fields.file.url}}" alt="Terceira Imagem projeto {{projeto.fields.titulo}}">
             </div>
             <div class="grid-8 projeto-info">
-                <p>Muito melhor do que ter um quarto elegante, é ter um quarto que se adequa ao seu dia a dia, e em um espaço pequeno consegue guardar todas as suas coisas.</p>
+                <p>{{projeto.fields.textoExplicacao}}</p>
                 <ul>
-                    <li>Conforto</li>
-                    <li>Design</li>
-                    <li>Moderno</li>
-                    <li>Espaço</li>
+                    <li>{{projeto.fields.palavraChave2}}</li>
+                    <li>{{projeto.fields.palavraChave2}}</li>
+                    <li>{{projeto.fields.palavraChave3}}</li>
+                    <li>{{projeto.fields.palavraChave4}}</li>
                 </ul>
             </div>
         </div>
 
-        <button (click)="showMore()" *ngIf="!otherProjects" class="button_show">Mostre mais</button>
-
-        <div *ngIf="otherProjects" class="projeto-item container" [@popOverState]>
-            <div class="grid-11">
-                <img src="../../assets/imagens/projetos/modelo1.png" alt="Imagem projeto quarto">
-                <h2>Passeio</h2>
+        <div *ngIf="otherProjects">
+            <button (click)="showMore()" *ngIf="!otherProjects" class="button_show">Mostre mais</button>
+            <div class="projeto-item container" [@popOverState] *ngFor="let projeto of projetos">
+                <div class="grid-11">
+                    <img src="{{projeto.fields.primeiraImagem.fields.file.url}}" alt="Primeira Imagem projeto {{projeto.fields.titulo}}">
+                    <h2>{{projeto.fields.titulo}}</h2>
+                </div>
+                <div class="grid-5 projeto-icone">
+                    <img src="{{projeto.fields.segundaImagem.fields.file.url}}" alt="Segunda Imagem projeto {{projeto.fields.titulo}}">
+                </div>
+                <div class="grid-8">
+                    <img src="{{projeto.fields.terceiraImagem.fields.file.url}}" alt="Terceira Imagem projeto {{projeto.fields.titulo}}">
+                </div>
+                <div class="grid-8 projeto-info">
+                    <p>{{projeto.fields.textoExplicacao}}</p>
+                    <ul>
+                        <li>{{projeto.fields.palavraChave2}}</li>
+                        <li>{{projeto.fields.palavraChave2}}</li>
+                        <li>{{projeto.fields.palavraChave3}}</li>
+                        <li>{{projeto.fields.palavraChave4}}</li>
+                    </ul>
+                </div>
             </div>
-            <div class="grid-5 projeto-icone">
-                <img src="../../assets/imagens/projetos/modelo3.png" alt="Imagem projeto quarto 2">
-            </div>
-            <div class="grid-8">
-                <img src="../../assets/imagens/projetos/modelo2.png" alt="Imagem projeto quarto 3">
-            </div>
-            <div class="grid-8 projeto-info">
-                <p>Muito melhor do que passear pela orla a vidros fechados. A Bikcraft Passeio é uma bicicleta que une conforto e praticidade para o seu dia a dia. Você nunca mais vai querer saber de outra.</p>
-                <ul>
-                    <li>Conforto</li>
-                    <li>Praticidade</li>
-                    <li>Design</li>
-                    <li>Versatilidade</li>
-                </ul>
-            </div>
+            <button (click)="showLess()" *ngIf="otherProjects" class="button_show">Mostre menos</button>
         </div>
-        <button (click)="showLess()" *ngIf="otherProjects" class="button_show">Mostre menos</button>
+
     </section>
 </body>
