--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -145,6 +145,14 @@ button[disabled] {
     margin-bottom: 60px;
 }
 
+.recaptcha {
+    padding: 10px 0 10px 0;
+}
+
+.recaptcha>div {
+    padding-top: 10px;
+}
+
 @media screen and (min-width: 788px) and (max-width: 979px) {
     .contato {
         height: 100vh;
