--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -20,9 +20,9 @@ img {
 }
 
 .btn {
-    border: 3px solid #fff;
+    border: 3px solid #b4acac;
     padding: 10px 30px;
-    color: #fff;
+    color: #b4acac;
     font-size: 14px;
     line-height: 20px;
     text-transform: uppercase;
