Add Mobile Version Background image

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,3 +18,9 @@ section {
         height: 100vh;
     }
 }
+
+@media only screen and (max-width: 787px) {
+    .background {
+        animation: animateMobile 15s ease-in-out infinite;
+    }
+}
