--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,7 +19,7 @@ section {
     }
 }
 
-@media only screen and (max-width: 787px) {
+@media screen and (max-width: 787px) {
     .background {
         animation: animateMobile 15s ease-in-out infinite;
     }
