--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,6 +5,7 @@
     top: 0%;
     width: 100%;
     animation: animate 15s ease-in-out 0.03s infinite;
+    -webkit-animation: animate 15s ease-in-out 0.03s infinite;
     background-size: cover;
     background-position: center;
 }
