--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -23,5 +23,6 @@ section {
 @media screen and (max-width: 787px) {
     .background {
         animation: animateMobile 15s ease-in-out 0.03s infinite;
+        -webkit-animation: animateMobile 15s ease-in-out 0.03s infinite;
     }
 }
