--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,6 +21,6 @@ section {
 
 @media screen and (max-width: 787px) {
     .background {
-        animation: animateMobile 15s ease-in-out infinite;
+        animation: none;
     }
 }
