--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,26 +1,39 @@
-.background {
-    z-index: -1;
-    position: absolute;
-    left: 0%;
-    top: 0%;
-    width: 100%;
-    animation: animate 15s ease-in-out infinite;
-    background-size: cover;
-    background-position: center;
-}
-
-section {
-    height: 100vh;
-}
-
-@media screen and (min-width: 788px) and (max-width: 979px) {
+    .home {
+        z-index: -1;
+        position: absolute;
+        left: 0%;
+        top: 0%;
+        width: 100%;
+        animation: animate 15s ease-in-out infinite;
+        background-size: cover;
+        background-position: center;
+    }
+    
     section {
         height: 100vh;
+        width: max-content;
     }
-}
-
-@media screen and (max-width: 787px) {
-    .background {
-        animation: none;
+    
+    @media screen and (min-width: 788px) and (max-width: 979px) {
+        section {
+            height: 100vh;
+        }
     }
-}
+    
+    @media screen and (max-width: 787px) {
+        .home {
+            animation: none;
+            width: 100%;
+            height: 100vh;
+        }
+        .home {
+            position: fixed;
+            z-index: -1;
+            top: 0%;
+            left: 0%;
+            width: 100%;
+            height: 100%;
+            animation: none;
+            background-position: center;
+        }
+    }
