Fix error about project palavra chaves

--- a/src/app/projetos/projetos.component.html
+++ b/src/app/projetos/projetos.component.html
@@ -47,7 +47,7 @@
                 <div class="grid-8 projeto-info">
                     <p>{{projeto.fields.textoExplicacao}}</p>
                     <ul>
-                        <li>{{projeto.fields.palavraChave1}}</li>
+                        <li>{{projeto.fields.palavrasChave1}}</li>
                         <li>{{projeto.fields.palavraChave2}}</li>
                         <li>{{projeto.fields.palavraChave3}}</li>
                         <li>{{projeto.fields.palavraChave4}}</li>
